--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       contents: read
       packages: write
       security-events: write
-    environment: deploy
+    environment: production
     steps:
       - name: Checkout source code # 소스코드 체크 아웃
         uses: actions/checkout@v4
